# kube-foresight

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-gate.yml
benchmarks/: README.md  __init__.py  alibaba.py  backtest.py  fetch_alibaba.sh
benchmarks/fixtures/: _generate.py  container_meta.csv  container_usage.csv  machine_meta.csv
charts/kube-foresight/: Chart.yaml  values.yaml
charts/kube-foresight/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
docs/: ADOPTION.md  architecture.md  auth.md
docs/screenshots/: README.md
examples/: demo-workloads.yaml
kube_foresight/: __init__.py  alerting.py  audit.py  exceptions.py  hpa.py  logging_config.py  models.py  scheduler.py
kube_foresight/analyzer/: profiler.py  stats.py
kube_foresight/cli/: app.py  formatters.py
kube_foresight/cli/commands/: analyze.py  collect.py  dashboard.py  demo.py  forecast.py  patch.py  recommend.py
kube_foresight/collector/: __init__.py  base.py  k8s.py  mock.py  prometheus.py  store.py
kube_foresight/dashboard/: __init__.py  app.py  serializers.py  service.py
kube_foresight/dashboard/routes/: api.py  pages.py
kube_foresight/dashboard/templates/: base.html
kube_foresight/forecaster/: __init__.py  trend.py
kube_foresight/pricing/: estimator.py
kube_foresight/recommender/: engine.py  patch.py  strategies.py
tests/: conftest.py  test_alerting.py  test_audit.py  test_hpa.py  test_models.py  test_scheduler.py
tests/test_analyzer/: test_profiler.py  test_stats.py
tests/test_benchmarks/: test_backtest.py
tests/test_collector/: test_k8s.py  test_mock.py  test_prometheus.py  test_store.py
tests/test_dashboard/: test_new_endpoints.py  test_routes.py  test_service.py
tests/test_forecaster/: test_trend.py
tests/test_pricing/: test_estimator.py  test_providers.py
tests/test_recommender/: test_engine.py  test_patch.py  test_strategies.py
(+22 files in other folders)
